# data-odbc-source

./: .gitignore  Cargo.toml  Extraction Design.excalidraw  Makefile  README.md  design.drawio  pyproject.toml  test_docker.sh
odbc_source/: __init__.py  odbc_source.pyi
oracle_rs/: Cargo.toml  build.rs  run-bindgen.sh
oracle_rs/odpi_src/: Makefile
oracle_rs/src/: binding.rs  connection.rs  error.rs  lib.rs  oracle_type.rs  statement.rs
oracle_rs/src/binding/: binding.rs  binding_impl.rs
src/: error.rs  lib.rs
src/common/: encryption.rs  mod.rs  parquet.rs
src/odbc/: deserialize.rs  mod.rs  schema.rs
src/oracle_src/: deserializer.rs  mod.rs
src/postgres/: deserializer.rs  mod.rs
