[package]
name = "odbc-source"
version = "0.3.19"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "odbc_source"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py38", "extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = { version = "54", default-features = false, features = [
    "chrono-tz", "json"
]}
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "lz4"]}
crossbeam-channel = "0.5"
once_cell = "1"
rayon = "1.10"
itertools = "0.14"
# ODBC
# odbc-api = {version = "0.49", default-features = false, features = ["odbc_version_3_5"]}
odbc-api = { version = "7.2.3", default-features = false, features = [
    "odbc_version_3_5",
] }
# odbc-sys = { version = "0.21.2", features=["static"]}

# Oracle
techx-rust-oracle = { path = "oracle_rs" }

# Postgres
postgres = { version = "0.19", default-features = false, features = ["with-chrono-0_4", "with-serde_json-1"]}
postgres_rustls = "=0.1.0"
rustls = "0.23.32"
rustls-native-certs = "0.8.1"
rust_decimal = { version= "1.36", default-features = false, features = [
    "db-tokio-postgres",
] }
tokio-rustls = "0.26.3"
# oracle = { git="https://github.com/techx-data-team/rust-oracle.git", branch="master"}
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
    "serde"
] }
# S3 Support
opendal = { version = "0.52", features = ["services-fs", "services-s3"] }
reqsign = { version = "0.16", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"]}
anyhow = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt"] }
# Encryption
aws-esdk = { version = "1", default-features = false }

[profile.release]
strip = true
codegen-units = 1
lto = "fat"