[package]
name = "techx-rust-oracle"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
paste = "1.0.5"
chrono = {version = "0.4", default-features = false, features = ["std"]}
# arrow2 = {git="https://github.com/jorgecarleitao/arrow2.git", rev = "0b345ae310e99729b2b48c56a2cb0a99027d1ac2", default-features = false, features = ["io_parquet", "io_parquet_snappy"]}
# rayon = "1.5"

[build-dependencies]
cc = "1.0"
